# firebolt-ingest

./: .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  Makefile  README.md  setup.cfg  sonar-project.properties
.github/workflows/: code-check.yml  fossa-scan.yml  integration-tests.yml  nightly.yml  pull-request.yml  release.yml  security-scan.yml  unit-tests.yml
examples/: example.ipynb  example_parquet.yaml
src/firebolt_ingest/: aws_settings.py  db.py  insert.py  table_model.py  table_service.py  table_utils.py  utils.py
src/firebolt_ingest/model/: __init__.py  table.py
src/firebolt_ingest/service/: __init__.py  table.py
tests/: test_main.py
tests/integration/: conftest.py  test_table_service.py
tests/integration/service/: test_table_service.py
tests/model/: test_table.py
tests/unit/: conftest.py  test_aws_settings.py  test_db.py  test_table_model.py  test_table_service.py  test_table_utils.py  test_utils.py
tests/unit/model/: conftest.py  test_table.py
tests/unit/service/: test_table_service.py
