[metadata]
name = novus
version = attr: novus.__version__
description = Template project, please update this description!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firebolt-analytics/novus
author = Firebolt
author_email = support@firebolt.io
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
;install_requires =
;    typer
python_requires = >=3.8
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    novus = novus.main:main

[options.extras_require]
dev =
    pytest
    mypy

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "
