[metadata]
name = firebolt_ingest
version = attr: firebolt_ingest.__version__
description = Firebolt ingestion library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firebolt-analytics/firebolt-ingest
author = Firebolt
author_email = support@firebolt.io
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    firebolt-sdk>=0.5.2
    pydantic
    pyyaml
    types-PyYAML>=6.0.4
python_requires = >=3.8
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    firebolt_ingest = firebolt_ingest.main:main

[options.extras_require]
dev =
    mypy
    pytest
    pytest-cov>=3.0.0
    pytest-mock

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "
